--- a/angular/src/app/noaccess/noaccess.component.html
+++ b/angular/src/app/noaccess/noaccess.component.html
@@ -1,1 +1,1 @@
-<div class="alert alert-danger">Admin Area you Are not Allowed</div>
+<div class="alert alert-danger">Admin Area you are not allowed here .....</div>
