--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -1,1 +1,27 @@
-<p>home works!</p>
+<div class="row">
+    <div class="col-3">
+        <div class="list-group">
+            <a class="list-group-item list-group-item-action" [class.active]="!category"
+            routerLink="/">All Categories</a>
+
+            <a *ngFor="let c of categories" class="list-group-item list-group-item-action"
+              routerLink="/" [queryParams]="{ cateory : c.nameofcat }" 
+              [class.active]="category===c.nameofcat">
+                {{c.nameofcat}}
+                
+            </a>
+        </div>
+    </div>
+    <!--Card -->
+    <div class="col">
+        <div class="row">
+            <ng-container *ngFor="let p of filteredProducts;let i=index">
+                <div class="col">
+                    <app-card class="card" [image]="p.image" [name]="p.name" [price]="p.price |currency:'USD':true">
+                    </app-card>
+                </div>
+                <div *ngIf="(i+1)%3===0" class="w-100"></div>
+            </ng-container>
+        </div>
+    </div>
+</div>
