--- a/angular/src/app/card/card.component.html
+++ b/angular/src/app/card/card.component.html
@@ -1,8 +1,13 @@
 <div class="card" style="width: 18rem;">
-    <img [src]="image" class="card-img-top" alt="...">
+    <img [src]="image" class="card-img-top" style="width:200px;height:200px">
     <div class="card-body">
         <h5 class="card-title">{{name}}</h5>
         <p class="card-text">{{price}}</p>
-        <a href="#" class="btn btn-primary">Add to Cart</a>
+        <p class="card-text">{{category}}</p>
+        <div *ngIf="showactios" class="card-footer">
+            <input *ngIf="this.authService.isLoggedin()" type="button" class="btn btn-primary btn-block" value="Buy">
+        </div>
     </div>
 </div>
+
+<!--btn-block makes button take all width in card-->
