--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -1,15 +1,16 @@
 <div class="row">
     <div class="col-3">
-        <div class="list-group">
-            <a class="list-group-item list-group-item-action" [class.active]="!category"
-            routerLink="/">All Categories</a>
+        <div class="sticky-top">
+            <div style="margin: 20px" class="list-group">
+                <a class="list-group-item list-group-item-action" [class.active]="!category" routerLink="/">All
+                    Categories</a>
 
-            <a *ngFor="let c of categories" class="list-group-item list-group-item-action"
-              routerLink="/" [queryParams]="{ cateory : c.nameofcat }" 
-              [class.active]="category===c.nameofcat">
-                {{c.nameofcat}}
-                
-            </a>
+                <a *ngFor="let c of categories" class="list-group-item list-group-item-action" routerLink="/"
+                    [queryParams]="{ cateory : c.nameofcat }" [class.active]="category===c.nameofcat">
+                    {{c.nameofcat}}
+
+                </a>
+            </div>
         </div>
     </div>
     <!--Card -->
@@ -17,7 +18,8 @@
         <div class="row">
             <ng-container *ngFor="let p of filteredProducts;let i=index">
                 <div class="col">
-                    <app-card class="card" [image]="p.image" [name]="p.name" [price]="p.price |currency:'USD':true">
+                    <app-card class="card" [image]="p.image" [name]="p.name" [price]="p.price |currency:'USD':true"
+                        [routerLink]="['/oneproduct',p._id]">
                     </app-card>
                 </div>
                 <div *ngIf="(i+1)%3===0" class="w-100"></div>
@@ -25,3 +27,6 @@
         </div>
     </div>
 </div>
+
+
+<!--sticky-top makes Position an element at the top of the viewport,-->
