--- a/angular/src/app/nav/nav.component.html
+++ b/angular/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
@@ -11,6 +11,9 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
                 <a class="nav-link" routerLink='/' style="cursor: pointer">Oshope </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/shop-cart">Shopping Cart</a>
             </li>
             <li *ngIf="!this.authService.isLoggedin()" class="nav-item">
                 <a class="nav-link" routerLink='/login'>Login</a>
