--- a/angular/src/app/home/home.component.css
+++ b/angular/src/app/home/home.component.css
@@ -2,3 +2,10 @@
     margin: 10px;
     width: 12rem;
 }
+#c{
+    width:150px;
+}
+#search{
+    margin: 20px 0px 50px 250px;
+    width: 65rem;
+}
