--- a/angular/src/app/nav/nav.component.html
+++ b/angular/src/app/nav/nav.component.html
@@ -13,7 +13,9 @@
                 <a class="nav-link" routerLink='/' style="cursor: pointer">Oshope </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="/shop-cart">Shopping Cart</a>
+                <a class="nav-link" routerLink="/shop-cart"><i class="fas fa-shopping-cart">{{items.length}}</i>
+                </a>
+
             </li>
             <li *ngIf="!this.authService.isLoggedin()" class="nav-item">
                 <a class="nav-link" routerLink='/login'>Login</a>
@@ -35,9 +37,5 @@
             </li>
 
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
     </div>
 </nav>
