--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -1,4 +1,9 @@
+<ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-scale-multiple">
+    <p style="font-size: 20px; color: white">Loading...</p>
+</ngx-spinner>
+
 <div class="row">
+
     <input id="search" #search class="form-control mr-sm-2" (keyup)="onkeyup(search.value)" type="search"
         placeholder="Search" aria-label="Search">
     <div class="col-3">
