--- a/angular/src/app/oneproduct/oneproduct.component.html
+++ b/angular/src/app/oneproduct/oneproduct.component.html
@@ -1,4 +1,5 @@
 <div class="row">
+    <div *ngIf="y" class="alert alert-success">This product is Already Added before into You Cart</div>
     <div class="col-8">
         <div *ngIf="!this.authService.isLoggedin()" class="alert alert-danger">You can not By this product
             without login
@@ -15,8 +16,7 @@
         <label>All Price</label>
         <input [value]="quantity.value * product.price " class="form-control" type="number">
         <button *ngIf="this.authService.isLoggedin()" type="button" class="btn btn-primary"
-            (click)="onClick(product._id);">Add To
+            (click)="onClick(product._id);refresh()">Add To
             Cart</button>
-
     </div>
 </div>
