--- a/angular/src/app/shoppingcart/shoppingcart.component.html
+++ b/angular/src/app/shoppingcart/shoppingcart.component.html
@@ -1,1 +1,13 @@
-<p>shoppingcart works!</p>
+<ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-scale-multiple">
+    <p style="font-size: 20px; color: white">Loading...</p>
+</ngx-spinner>
+
+<div class="row">
+
+    <ng-container *ngFor="let c of products;let i=index">
+        <app-card class="card" [image]="c.image" [name]="c.name" [price]="c.price |currency:'USD':true"
+            [showactios]="true" [category]="c.category?.nameofcat">
+        </app-card>
+        <div *ngIf="(i+1)%3===0" class="w-100"></div>
+    </ng-container>
+</div>
