--- a/angular/src/app/shoppingcart/shoppingcart.component.css
+++ b/angular/src/app/shoppingcart/shoppingcart.component.css
@@ -1,3 +1,9 @@
 .row{
-    margin: 20px 0px 0px 60px
-}
+    margin: 40px 0px 0px 100px
+    }
+    .card{
+        width: 12rem;
+        margin: 25px;
+        margin-top: 25px;
+    }
+    
