--- a/angular/src/app/shoppingcart/shoppingcart.component.html
+++ b/angular/src/app/shoppingcart/shoppingcart.component.html
@@ -1,3 +1,11 @@
+<div *ngIf="notvalid" class="alert alert-danger">Wroooooooooooooooooong</div>
+<form #f="ngForm" class="sticky-top" (ngSubmit)="f.valid? save(f.value):null">
+    <input #product="ngModel" [ngModel]="products" name="product" id="pro_id" type="hidden" class="form-control"
+        required>
+    <input #product="ngModel" [ngModel]="userid" name="user" id="user_id" type="hidden" class="form-control" required>
+    <button type="submit" class="btn btn-primary">Check Out </button>
+
+</form>
 <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-scale-multiple">
     <p style="font-size: 20px; color: white">Loading...</p>
 </ngx-spinner>
@@ -5,9 +13,11 @@
 <div class="row">
 
     <ng-container *ngFor="let c of products;let i=index">
-        <app-card class="card" [image]="c.image" [name]="c.name" [price]="c.price |currency:'USD':true"
-            [showactios]="true" [category]="c.category?.nameofcat">
-        </app-card>
+        <div class="col">
+            <app-card class="card" [image]="c.image" [name]="c.name" [price]="c.price |currency:'USD':true"
+                [showactios]="true" [category]="c.category?.nameofcat">
+            </app-card>
+        </div>
         <div *ngIf="(i+1)%3===0" class="w-100"></div>
     </ng-container>
 </div>
