pagination in orders

--- a/angular/src/app/admin/orders/orders.component.html
+++ b/angular/src/app/admin/orders/orders.component.html
@@ -1,1 +1,42 @@
-<p>orders works!</p>
+<table
+  class="table table-striped"
+  [svData]="orders"
+  #sv="svDataTable"
+  [svRowsOnPage]="5"
+  svSortBy="name"
+  svSortOrder="asc"
+>
+  <thead>
+    <tr>
+      <th>#</th>
+      <th>User</th>
+      <th>Date</th>
+      <th>Products</th>
+      <th>Price</th>
+    </tr>
+  </thead>
+  <tr *ngFor="let item of sv.data; index as i">
+    <th style="color:dodgerblue">{{ i + 1 }}</th>
+    <td>{{ item.user.name }}</td>
+    <td>{{ item.date }}</td>
+    <td>
+      <ul>
+        <li *ngFor="let p of item.product">{{ p.name }}</li>
+      </ul>
+    </td>
+    <td>
+      <ul>
+        <li *ngFor="let p of item.product">{{ p.price }}</li>
+      </ul>
+    </td>
+  </tr>
+  <tfoot>
+    <tr>
+      <td colspan="4">
+        <sv-bootstrap-paginator
+          [rowsOnPageSet]="[5, 10, 15, 25]"
+        ></sv-bootstrap-paginator>
+      </td>
+    </tr>
+  </tfoot>
+</table>
