--- a/angular/src/app/home/home.component.css
+++ b/angular/src/app/home/home.component.css
@@ -1,11 +1,15 @@
-.card{
-    margin: 10px;
-    width: 12rem;
+.card {
+  margin: 10px;
+  width: 12rem;
 }
-#c{
-    width:150px;
+#c {
+  width: 150px;
 }
-#search{
-    margin: 20px 0px 50px 250px;
-    width: 65rem;
+#search {
+  margin: 20px 0px 50px 250px;
+  width: 65rem;
+}
+h1 {
+  text-shadow: 2px 2px 5px red;
+  text-align: center;
 }
